--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,12 @@
     </div>
     <div class="social-media">
       <nav>
+        <!--
         {% for item in site.data.settings.social %}
           <a href="{{ item.link }}" target="_blank"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
         {% endfor %}
+        -->
+        <p> Powered by SKR9 Traders </p>
       </nav>
     </div>
   </div>
